// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/nonstop/_series/index.vue { locale: "en" } snapshot test renders correctly 1`] = `
<section class="section">
  <h1 class="title">DanceDanceRevolution A20 - NONSTOP</h1>
  <div class="buttons"><button type="button" to="/nonstop/16" disabled="disabled" class="button is-info is-outlined">
      <!----><span>
      NONSTOP(A20)
    </span>
      <!---->
    </button><a class="button is-info">
      <!----><span>
      GRADE(A20)
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      NONSTOP(A20 PLUS)
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      GRADE(A20 PLUS)
    </span>
      <!---->
    </a></div>
  <courselist-stub courses=""></courselist-stub>
</section>
`;

exports[`pages/nonstop/_series/index.vue { locale: "ja" } snapshot test renders correctly 1`] = `
<section class="section">
  <h1 class="title">DanceDanceRevolution A20 - NONSTOP</h1>
  <div class="buttons"><button type="button" to="/nonstop/16" disabled="disabled" class="button is-info is-outlined">
      <!----><span>
      NONSTOP(A20)
    </span>
      <!---->
    </button><a class="button is-info">
      <!----><span>
      段位認定(A20)
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      NONSTOP(A20 PLUS)
    </span>
      <!---->
    </a><a class="button is-info">
      <!----><span>
      段位認定(A20 PLUS)
    </span>
      <!---->
    </a></div>
  <courselist-stub courses=""></courselist-stub>
</section>
`;
